# steve-trigger

./: .gitignore  .npmignore  Makefile  package-lock.json  package.json  pyproject.toml  serverless.yml  setup.cfg
.github/workflows/: linters.yml  production.yml
api/: client.py  utils.py
env/: __init__.py  local.example.py
src/: __init__.py  trigger.py
